# eiger

./: README.md
backend/: README.md  main.py  pyproject.toml  record_and_transcribe.py
backend/backend.egg-info/: PKG-INFO  requires.txt
frontend/: index.html  server.py
ios-app/: App.tsx  ChatScreen.tsx  DBScreen.tsx  app.json  env.d.ts  package-lock.json  package.json  tsconfig.json  types.ts
